@@ -123,7 +123,7 @@ func (ch *Chain) PostCheckBlock(bl *btc.Block) (er error) {
 			er = errors.New("CheckBlock() : weight limits failed - RPC_Result:bad-blk-weight")
 			return
 		}
-		//fmt.Println("New block", bl.Height, " Size:", len(bl.OldData), " Weight:", bl.BlockWeight, " Raw:", len(bl.Raw))
+		//fmt.Println("New block", bl.Height, " Size:", len(bl.NoWitnessData), " Weight:", bl.BlockWeight, " Raw:", len(bl.Raw))
 	}
 
 	if !bl.Trusted {
